refactor: replace vendored FBClient.Headers with CMake FetchContent
Remove 60 vendored Firebird and Boost header files from the repository.
Firebird public headers (ibase.h, Interface.h, IdlFbInterfaces.h, etc.)
are now downloaded automatically from the FirebirdSQL/firebird GitHub
repository at a pinned release tag (v5.0.2) using CMake FetchContent.

Also remove vendored Microsoft ODBC SDK headers (SQL.H, SQLEXT.H) from
the Headers/ directory — these are provided by the Windows SDK and
unixODBC-dev on Linux.

Changes:
- Add cmake/FetchFirebirdHeaders.cmake (FetchContent + SOURCE_SUBDIR)
- Delete FBClient.Headers/ (60 files: firebird/*, impl/*, boost/*, etc.)
- Delete Headers/SQL.H and Headers/SQLEXT.H (system SDK headers used)
- Move Headers/OdbcUserEvents.h to project root (custom project header)
- Update CMakeLists.txt and IscDbc/CMakeLists.txt include paths
- Update OdbcConnection.h include path for OdbcUserEvents.h

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,12 +44,14 @@ else()
     endif()
 endif()
 
+# Fetch Firebird public headers from GitHub (replaces vendored FBClient.Headers)
+include(cmake/FetchFirebirdHeaders.cmake)
+
 # Include directories
 include_directories(
     ${CMAKE_CURRENT_SOURCE_DIR}
     ${CMAKE_CURRENT_SOURCE_DIR}/IscDbc
-    ${CMAKE_CURRENT_SOURCE_DIR}/FBClient.Headers
-    ${CMAKE_CURRENT_SOURCE_DIR}/Headers
+    ${FIREBIRD_INCLUDE_DIR}
 )
 
 # Add subdirectories
