feat: Phase 11 — SQLGetTypeInfo fixes, SQLCancel/timeout, connection pool reset
11.1 SQLGetTypeInfo — Fix Spec Violations & Thread-Safety:
- Make static types array const, copy into per-instance vector (thread-safe)
- Sort result set by DATA_TYPE ascending (ODBC spec requirement)
- Return all matching rows for a given DATA_TYPE (multi-row support)
- Version-gate BLOB-as-BINARY/VARBINARY to pre-FB4 only (no duplicates on FB4+)
- Fix SQL_GUID: SEARCHABLE = SQL_ALL_EXCEPT_LIKE, NULL prefix/suffix
- Fix SQL_ASYNC_MODE: report SQL_AM_NONE (driver has no async support)

11.2 Statement Timeout via cancelOperation():
- Add cancelOperation() to Connection interface using IAttachment::cancelOperation(fb_cancel_raise)
- Implement SQL_ATTR_QUERY_TIMEOUT getter/setter (stores value in OdbcStatement)
- Implement functional SQLCancel using cancelOperation() (no longer a no-op)
- IscStatement::cancel() now calls connection->cancelOperation()

11.3 Connection Pool Reset Improvements:
- Rollback pending transactions on SQL_ATTR_RESET_CONNECTION
- Close open cursors on all child statements during reset
- Reset autocommit, access mode, transaction isolation to defaults

Tests: 18 new tests (403 total), all passing on Windows and Linux

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -53,6 +53,7 @@ add_executable(firebird_odbc_tests
     test_bindcol.cpp
     test_wchar.cpp
     test_cursor_name.cpp
+    test_phase11_typeinfo_timeout_pool.cpp
 )
 
 # Link with Google Test and the ODBC library
