perf: Phase 10 performance engineering - benchmark harness, locking, LTO, ConvertingString stack buffer
- 10.0.1: Add micro-benchmark harness (tests/bench_fetch.cpp) using Google Benchmark v1.9.1
- 10.0.2: Add ODBC_PERF_COUNTERS compile-time flag (src/OdbcPerfCounters.h)
- 10.0.3: Establish baseline numbers in Docs/PERFORMANCE_RESULTS.md
- 10.0.4: Add 'benchmark' task to Invoke-Build
- 10.1.1: Replace Win32 kernel Mutex with SRWLOCK (~20ns vs ~1us)
- 10.1.2: Per-connection lock for stmt ops at DRIVER_LOCKED_LEVEL_ENV
- 10.2.1: Hoist conversions array to result-set lifetime (1 alloc per query)
- 10.2.4: [[likely]] on clearErrors() fast path (skip field resets)
- 10.6.1: 512-byte stack buffer in ConvertingString (no heap allocs)
- 10.6.2: Single-pass W->A conversion on Windows for <512B strings
- 10.7.1: Enable LTO for Release builds (cross-TU inlining)
- 10.7.4: Verified conv* methods not DLL-exported
- 10.8.2: Cache-line-aligned Sqlda::buffer (AlignedAllocator<char, 64>)

All 406 tests pass.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,11 @@ set(CMAKE_C_STANDARD_REQUIRED ON)
 option(BUILD_SHARED_LIBS "Build shared libraries" ON)
 option(BUILD_TESTING "Build tests" ON)
 option(BUILD_SETUP "Build setup/configuration library" OFF)
+option(ODBC_PERF_COUNTERS "Enable performance counter instrumentation" OFF)
+
+if(ODBC_PERF_COUNTERS)
+    add_definitions(-DODBC_PERF_COUNTERS)
+endif()
 
 # Platform-specific settings
 if(WIN32)
@@ -30,6 +35,16 @@ else()
     # Linux/Unix
     add_definitions(-DUNIX)
     set(CMAKE_POSITION_INDEPENDENT_CODE ON)
+endif()
+
+# Enable Link-Time Optimization (LTO) for Release builds
+# LTO allows cross-TU inlining (e.g., OdbcConvert::conv* called from OdbcStatement)
+# and dead code elimination across the OdbcFb.dll → IscDbc.lib boundary.
+include(CheckIPOSupported)
+check_ipo_supported(RESULT _ipo_supported OUTPUT _ipo_output)
+if(_ipo_supported)
+    set(CMAKE_INTERPROCEDURAL_OPTIMIZATION_RELEASE TRUE)
+    set(CMAKE_INTERPROCEDURAL_OPTIMIZATION_RELWITHDEBINFO TRUE)
 endif()
 
 # Find required packages
@@ -73,10 +88,12 @@ set(ODBCJDBC_SOURCES
     src/OdbcStatement.cpp
     src/SafeEnvThread.cpp
     src/Utf16Convert.cpp
+    src/OdbcPerfCounters.cpp
 )
 
 set(ODBCJDBC_HEADERS
     src/ConnectDialog.h
+    src/OdbcPerfCounters.h
     src/DescRecord.h
     src/InfoItems.h
     src/Main.h
