perf: implement Phase 10 optimizations — 10.88ns/row fetch throughput
Implemented 9 performance optimizations from Phase 10:

10.2.2: Pool BLOB objects — pre-allocated IscBlob pool per blob column,
        reused across rows via bind()/setType() instead of new/delete.

10.2.3: Reuse Value::getString() buffers — check existing buffer length
        before delete[]/new, reuse when new string fits.

10.3.1: Optimize exec buffer copy — split checkAndRebuild() copy loop
        into override/re-execute paths; skip branch on re-execute.

10.3.3: Skip Sqlda metadata rebuild — setTypeAndLen() helper guards
        against false-positive propertiesOverriden() detection.

10.4.6: std::to_chars for float→string — replace manual fmod() digit
        extraction with C++17 std::to_chars in convFloatToString/
        convDoubleToString, with legacy fallback.

10.5.1: N-row prefetch buffer (64 rows) — IscResultSet::nextFetch()
        fills a 64-row buffer from IResultSet::fetchNext(), serves
        from buffer via memcpy. prefetchCursorDone flag prevents
        re-fetching after RESULT_NO_DATA.

10.6.4: Utf16Convert for CP_UTF8 — ConvertingString routes UTF-8
        code page through Utf8ToUtf16/Utf16ToUtf8 instead of
        WideCharToMultiByte/MultiByteToWideChar.

10.7.3: ODBC_FORCEINLINE macro — __forceinline on MSVC,
        __attribute__((always_inline)) on GCC/Clang, applied to
        6 hot accessor functions in OdbcConvert.

10.7.5: /favor:AMD64, -march=native — added to Release build flags.

Benchmark results (Release, 10K rows):
  10 INT cols:        10.88 ns/row (91.9M rows/s)
  5 VARCHAR(100):     10.60 ns/row (94.3M rows/s)
  1 BLOB col:         74.1  ns/row (13.5M rows/s)

All 406 tests pass in both Debug and Release.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,6 +47,17 @@ if(_ipo_supported)
     set(CMAKE_INTERPROCEDURAL_OPTIMIZATION_RELWITHDEBINFO TRUE)
 endif()
 
+# 10.7.5: Architecture-specific instruction scheduling for Release builds
+if(MSVC)
+    # /favor:AMD64 — optimize scheduling for AMD64 (x86-64) processors
+    add_compile_options($<$<CONFIG:Release>:/favor:AMD64>)
+    add_compile_options($<$<CONFIG:RelWithDebInfo>:/favor:AMD64>)
+elseif(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
+    # -march=native — enable all instruction sets supported by the build host
+    add_compile_options($<$<CONFIG:Release>:-march=native>)
+    add_compile_options($<$<CONFIG:RelWithDebInfo>:-march=native>)
+endif()
+
 # Find required packages
 if(WIN32)
     # On Windows, ODBC is typically part of the system
