feat: Phase 12.1 + 12.4.1 — SQLWCHAR codec unification and CHARSET=UTF8 default
Phase 12.1 — Consolidate Encoding Implementations:
- Introduce ODBC_SQLWCHAR typedef in Connection.h (always 16-bit on all platforms)
- Change all codec typedefs (WCSTOMBS/MBSTOWCS) to use ODBC_SQLWCHAR* instead of wchar_t*
- Update all *ToStringW conversion functions in OdbcConvert.cpp to use SQLWCHAR* directly
- Fix convVarStringSystemToStringW to use Utf8ToUtf16() instead of locale-dependent mbstowcs()
- Add trivial ASCII widening in ODBCCONVERT_CONV_TO_STRINGW macro for int->StringW
- Update FSS and UTF-8 codecs in MultibyteConvert.cpp to use ODBC_SQLWCHAR*
- On Linux, CHARSET=NONE fallback now uses UTF-8 codec instead of incompatible wcstombs
- Fix MainUnicode.cpp to use SQLWCHAR*/Utf16Length instead of wchar_t*/wcslen
- Fix OdbcStatement.cpp to use SQLWCHAR* and Utf16Length

Phase 12.4.1 — Default CHARSET to UTF8:
- When CHARSET is not specified in connection string, default to UTF8
- Ensures consistent encoding, correct Unicode support, optimal server transliteration

All 406 tests pass. Benchmarks verified.

--- a/src/IscDbc/CMakeLists.txt
+++ b/src/IscDbc/CMakeLists.txt
@@ -124,6 +124,7 @@ add_library(IscDbc STATIC ${ISCDBC_SOURCES} ${ISCDBC_HEADERS})
 # Include directories
 target_include_directories(IscDbc PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR}
+    ${CMAKE_CURRENT_SOURCE_DIR}/..
     ${FIREBIRD_INCLUDE_DIR}
 )
 
