feat: Phase 12.2-12.4 — OdbcString, direct UTF-16 diagnostics, unify StringW, CHARSET docs
Phase 12.2.1: Introduce OdbcString — UTF-16-native string class
- SQLWCHAR-backed string with from_utf8/from_utf16/from_ascii factories
- copy_to_w_buffer/copy_to_a_buffer with proper truncation handling
- Value semantics (copyable, movable), 26 unit tests

Phase 12.2.2: Direct UTF-16 output for diagnostic W-API functions
- Added sqlGetDiagRecW/sqlGetDiagFieldW on OdbcError and OdbcObject
- SQLGetDiagRecW/SQLGetDiagFieldW bypass ConvertingString entirely
- Eliminates W→A→W roundtrip for all diagnostic calls

Phase 12.3.2: Unify convStringToStringW / convVarStringToStringW
- Extracted shared convToStringWImpl helper (~80 lines deduplication)
- Both functions now 3-line wrappers calling the helper

Phase 12.4.2: Document CHARSET parameter behavior in README
- Usage table with UTF8/ISO/NONE recommendations
- Note about SQLSTATE 01000 informational on default

Build infrastructure: Optimize multi-charset test runs
- Primary (UTF8) config runs full 432-test suite via ctest
- Non-primary configs run only 141 charset-sensitive tests via gtest filter
- ~60% reduction in CI test time for the 3-config matrix

Test count: 406 → 432 (26 new OdbcString unit tests)

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -64,6 +64,11 @@ add_executable(firebird_odbc_tests
     test_wchar.cpp
     test_cursor_name.cpp
     test_phase11_typeinfo_timeout_pool.cpp
+    test_odbc_string.cpp
+    # Utf16Convert.cpp is compiled into OdbcFb.dll but its symbols are not exported.
+    # We include it here so that OdbcString unit tests can link without requiring
+    # the full driver DLL at test time.
+    ${CMAKE_SOURCE_DIR}/src/Utf16Convert.cpp
 )
 
 # Link with Google Test and the ODBC library
